revert add fund frag

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,8 @@ dependencies {
 
 //    compile 'com.anjlab.android.iab.v3:library:1.0.44'
 
+//    compile 'com.android.billingclient:billing:dp-1'
+
     compile project(':domain')
 
     compile project(':typing-indicator')
