--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -186,6 +186,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
+        <activity
+            android:name=".presentation.dashboard.expire.ExpireActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
         <service
             android:name="com.twilio.client.TwilioClientService"
             android:exported="false"
@@ -283,6 +288,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <service android:name="com.ethan.morephone.widget.countdown.TimerService"/>
 
     </application>
 
