--- a/typing-indicator/build.gradle
+++ b/typing-indicator/build.gradle
@@ -28,7 +28,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    def dataDependencies = rootProject.ext.dataDependencies
+    compile dataDependencies.appcompat
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:2.8.0'
 }
