--- a/data/build.gradle
+++ b/data/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile dataDependencies.converterGson
     compile dataDependencies.retrofitLogging
     compile dataDependencies.appcompat
-    compile 'com.facebook.stetho:stetho:1.5.0'
+//    compile 'com.facebook.stetho:stetho:1.5.0'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
