create contact screen and detail

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,8 @@ dependencies {
 
     compile 'com.android.support:multidex:1.0.1'
 
+    compile 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
+
 //    compile 'com.anjlab.android.iab.v3:library:1.0.44'
 
 //    compile 'com.android.billingclient:billing:dp-1'
